[package]
name = "rocket-slogger"
version = "0.2.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2021"
description = """
Middleware (fairing) for Rocket.rs 0.5-rc.4 web servers to have integrated slog logging of request activity
"""
repository = "https://github.com/iferc/rocket-slogger"
keywords = ["rocket", "slog", "slogger", "logging", "middleware"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
exclude = [".github", "examples"]

[dependencies]
rocket = "0.5.0-rc.4"
slog = "2.7"
slog-term = { version = "2.9", optional = true }
slog-bunyan = { version = "2.4", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1.3", features = ["v4"], optional = true }

[dev-dependencies]
slog-term = "2.9"
slog-bunyan = "2.4"

[features]
default = []

callbacks = []

transactions = ["chrono", "uuid"]
local_time = []

terminal = ["slog-term"]
bunyan = ["slog-bunyan"]

[package.metadata.docs.rs]
all-features = true
