[package]
name = "rocket-slogger"
version = "1.0.0"
authors = ["Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
description = """
Middleware (fairing) for Rocket.rs 0.5 web servers to have integrated slog logging of request activity
"""
repository = "https://github.com/iferc/rocket-slogger"
keywords = ["rocket", "slog", "slogger", "logging", "middleware"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
exclude = [".github", "examples"]

[dependencies]
rocket = "0.5"
slog = { version = "2.7", features = ["release_max_level_debug"] }
slog-envlogger = "2.2.0"
slog-term = { version = "2.9", optional = true }
slog-bunyan = { version = "2.5", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1.8", features = ["v4"], optional = true }

[dev-dependencies]
slog-term = "2.9"
slog-bunyan = "2.5"

[features]
default = []

callbacks = []

transactions = ["chrono", "uuid"]
local_time = []

terminal = ["slog-term"]
bunyan = ["slog-bunyan"]

[package.metadata.docs.rs]
all-features = true
