[package]
name = "rocket-slogger"
version = "1.1.0"
authors = ["Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
description = """
Middleware (fairing) for Rocket.rs 0.5 web servers to have integrated slog logging of request activity
"""
repository = "https://github.com/iferc/rocket-slogger"
keywords = ["rocket", "slog", "slogger", "logging", "middleware"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
exclude = [".github", "examples"]

[[example]]
name = "bunyan"
path = "examples/bunyan.rs"

[[example]]
name = "bunyan-feature"
path = "examples/bunyan-feature.rs"

[[example]]
name = "bunyan-callbacks-features"
path = "examples/bunyan-callbacks-features.rs"

[[example]]
name = "terminal"
path = "examples/terminal.rs"

[[example]]
name = "terminal-feature"
path = "examples/terminal-feature.rs"

[dependencies]
rocket = "0.5"
slog = "2.7"
slog-envlogger = { version = "2.2", optional = true }
slog-term = { version = "2.9", optional = true }
slog-bunyan = { version = "2.5", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1.15", features = ["v4"], optional = true }

[dev-dependencies]
slog-term = "2.9"
slog-bunyan = "2.5"

[features]
default = []

callbacks = []

transactions = ["chrono", "uuid"]
local_time = []

terminal = ["slog-term"]
bunyan = ["slog-bunyan"]
envlogger = ["slog-envlogger"]

max_level_off = ["slog/max_level_off"]
max_level_error = ["slog/max_level_error"]
max_level_warn = ["slog/max_level_warn"]
max_level_info = ["slog/max_level_info"]
max_level_debug = ["slog/max_level_debug"]
max_level_trace = ["slog/max_level_trace"]
release_max_level_off = ["slog/release_max_level_off"]
release_max_level_error = ["slog/release_max_level_error"]
release_max_level_warn = ["slog/release_max_level_warn"]
release_max_level_info = ["slog/release_max_level_info"]
release_max_level_debug = ["slog/release_max_level_debug"]
release_max_level_trace = ["slog/release_max_level_trace"]

[package.metadata.docs.rs]
all-features = true
